# sizzle-website

./: 404.html  Cargo.toml  README.md  Rocket.toml  affiliate.html  faq.html  index.html  itpa.html  paddleme.html  paid-thanks.html  payme.html  samples.html  subscribe.html  trial-thanks.html
js/: sendform.js  webflow.js
samples/: sizzle666.html  sizzle714.html  sizzle793.html  sizzle800.html
src/: main.rs  models.rs  utils.rs
static/: affiliate.html  index.html  payme.html  samples.html
static/css/: thesizzle.webflow.css  webflow.css
static/samples/: sizzle787.html
templates/: mailchimp-referrer-subscribe-form.html.hbs  refer-a-mate.html.hbs
