[package]
name = "sizzle-website"
version = "1.0.0"
authors = ["Sean Policarpio <sean@policarp.io>"]

[dependencies]
rocket = "0.4.0"
serde = {version = "*", features = ["derive"]}
base64 = "*"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["serve", "handlebars_templates"]