[package]
name = "sizzle-website"
version = "1.0.0"
authors = ["Sean Policarpio <sean@policarp.io>"]

[dependencies]
clap = "2.32.0"
rocket = "0.4.0"
serde = {version = "1.0.88", features = ["derive"]}
base64 = "0.10.1"
hmac = "0.7.0"
sha2 = "0.8.0"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["serve", "handlebars_templates", "sqlite_pool"]